Migrate .drone.yml to new drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,62 +1,69 @@
+---
+kind: pipeline
+name: default
+
+platform:
+  os: linux
+  arch: amd64
+
 workspace:
   base: /go
   path: src/github.com/magento-mcom/go-starter
 
-pipeline:
-  install:
-    image: mcom/gobuilder:1.12
-    pull: true
-    commands:
-      - "make dep"
+steps:
+- name: install
+  pull: always
+  image: mcom/gobuilder:1.12
+  commands:
+  - make dep
 
-  test:
-    image: mcom/gobuilder:1.12
-    pull: true
-    commands:
-      - "make test"
+- name: test
+  pull: always
+  image: mcom/gobuilder:1.12
+  commands:
+  - make test
 
-  build:
-    image: mcom/gobuilder:1.12cross
-    pull: true
-    group: build
-    environment:
-      GOOS: "darwin"
-      GOARCH: "amd64"
-      BUILDTAG: "${DRONE_TAG}"
-      BUILDCOMMIT: "${DRONE_COMMIT_SHA:0:7}"
-      BUILDLDFLAGS: "-linkmode external -s"
-      BUILDARGS: ""
-      BUILDOUTPREFIX: "build/darwin-amd64/"
-      CC: o64-clang
-      CXX: o64-clang++
-    commands:
-      - "make build"
-      - "tar -C build/darwin-amd64 -cvzf go-starter-darwin-amd64.tgz ."
+- name: build
+  pull: always
+  image: mcom/gobuilder:1.12cross
+  commands:
+  - make build
+  - tar -C build/darwin-amd64 -cvzf go-starter-darwin-amd64.tgz .
+  environment:
+    BUILDCOMMIT: ${DRONE_COMMIT_SHA:0:7}
+    BUILDLDFLAGS: -linkmode external -s
+    BUILDOUTPREFIX: build/darwin-amd64/
+    BUILDTAG: ${DRONE_TAG}
+    CC: o64-clang
+    CXX: o64-clang++
+    GOARCH: amd64
+    GOOS: darwin
 
-  release:
-    group: upload
-    image: socialengine/github-release
-    pull: true
-    environment:
-      GITHUB_RELEASE_VERSION: v0.7.2
-    commands:
-      - "github-release release --user magento-mcom --repo go-starter --tag ${DRONE_TAG} --name ${DRONE_TAG}"
-      - "github-release upload  --user magento-mcom --repo go-starter --tag ${DRONE_TAG} --name go-starter-darwin-amd64.tgz --file ./go-starter-darwin-amd64.tgz"
-    secrets: [ GITHUB_TOKEN ]
-    when:
-      event: [ tag ]
+- name: release
+  pull: always
+  image: socialengine/github-release
+  commands:
+  - github-release release --user magento-mcom --repo go-starter --tag ${DRONE_TAG} --name ${DRONE_TAG}
+  - github-release upload  --user magento-mcom --repo go-starter --tag ${DRONE_TAG} --name go-starter-darwin-amd64.tgz --file ./go-starter-darwin-amd64.tgz
+  environment:
+    GITHUB_RELEASE_VERSION: v0.7.2
+    GITHUB_TOKEN: { from_secret: GITHUB_TOKEN }
+  when:
+    event: [ tag ]
 
-  update-tap:
-    image: mcom/brewbuilder
-    pull: true
-    secrets: [ GITHUB_TOKEN ]
-    # brewbuilder settings
-    tap: "https://github.com/magento-mcom/homebrew-tap"
-    formula: "Formula/go-starter.rb"
-    template: "formula.template.rb"
-    version: "${DRONE_TAG}"
-    revision: "${DRONE_BUILD_NUMBER}"
-    url: "https://github.com/magento-mcom/go-starter/releases/download/${DRONE_TAG}/go-starter-darwin-amd64.tgz"
-    hash_file: "go-starter-darwin-amd64.tgz"
-    when:
-      event: [ tag ]
+- name: update-tap
+  pull: always
+  image: mcom/brewbuilder
+  settings:
+    formula: Formula/go-starter.rb
+    hash_file: go-starter-darwin-amd64.tgz
+    revision: ${DRONE_BUILD_NUMBER}
+    tap: https://github.com/magento-mcom/homebrew-tap
+    template: formula.template.rb
+    url: https://github.com/magento-mcom/go-starter/releases/download/${DRONE_TAG}/go-starter-darwin-amd64.tgz
+    version: ${DRONE_TAG}
+  environment:
+    GITHUB_TOKEN: { from_secret: GITHUB_TOKEN }
+  when:
+    event: [ tag ]
+
